--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ span{
 }
 
 .center {
-  height: 100vh;
+  height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,7 +19,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: rgba(127, 105, 224, 0.247);
 }
 
 code {
