--- a/src/verifyEmail.css
+++ b/src/verifyEmail.css
@@ -1,10 +1,10 @@
 .verifyEmail {
   width: 90%;
   max-width: 500px;
-  box-shadow: 0px 0px 4px hsl(210, 12%, 75%);
+  box-shadow: 0px 0px 4px hsl(30, 100%, 0%);
   text-align: center;
   padding: 40px 20px;
-  background-color: hsl(210, 10%, 98%);
+  background-color: hsl(180, 79%, 22%);
 }
 
 .verifyEmail h1{
@@ -17,7 +17,7 @@
 }
 
 .verifyEmail > span{
-  color: gray;
+  color: black;
 }
 
 .verifyEmail > button {
